--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 *.pyc
+*.txt
+
+# Byte-compiled / optimized files
+__pycache__/
+*.py[cod]
+
+# IPython checkpoints
+.ipynb_checkpoints/
+
+# Datasets
+data/
+
+# Tensorflow summaries
+summaries/
+
+# Model parameters
+checkpoints/
